EMS-Upgrade: Updated code with new API imports/calls. Removed Bad request handling and replaced with RestControllerExceptionHandler [WIP]